monitoring/grafana/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtual-services
spec:
  hosts:
    - "grafana.istio.com"
  gateways:
    - istio-system/microservice-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: grafana.monitoring.svc.cluster.local
